--- a/public/global.css
+++ b/public/global.css
@@ -8,7 +8,7 @@ body {
 	color: #333;
 	margin: 0;
 	overflow: hidden;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: 'Baloo 2', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 a {
@@ -59,4 +59,16 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
+}
+
+.clickable {
+    cursor: pointer;
+}
+
+.no-pointer-event {
+  pointer-events: none;
+}
+
+.no-select {
+  user-select: none;
 }
